[GEOS-10622] PregeneralizedFeature extension fixes for JDBCStore